Try to use httpie

--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -36,6 +36,7 @@
         - logstash
         - elixir
         - tmux-cssh
+        - httpie
 
     # java for Elasticsearch
     - shell: brew cask list | grep '^java$'
