Try to use neocomplete instead of YCM

--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -26,7 +26,7 @@
         - sphinx
         - the_silver_searcher
         - python3
-        - "vim --with-python3"
+        - "vim --with-lua"
         - wget
         - sshrc
         - fzf
