Use deoplete.nvim with neovim + python3

--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: all
   tasks:
+    - shell: pip3 install --upgrade neovim
+
     - file: src={{ curdir }}/{{ item }} dest=~/.{{ item }} state=link
       with_items:
         - vimrc
