Configure nvim + key repeat speed

--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -1,7 +1,14 @@
 ---
 - hosts: all
   tasks:
-    - shell: pip3 install --upgrade neovim
+    - name: install nvim-client for python
+      shell: pip3 install --upgrade neovim
+
+    - name: increase key repeate speed
+      shell: defaults write NSGlobalDomain KeyRepeat -int 1
+
+    - name: shorter delay until key repeat
+      shell: defaults write NSGlobalDomain InitialKeyRepeat -int 12
 
     - file: src={{ curdir }}/{{ item }} dest=~/.{{ item }} state=link
       with_items:
