--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -26,6 +26,7 @@
         - sphinx
         - the_silver_searcher
         - python3
+        - 'neovim/neovim/neovim'
         - wget
         - sshrc
         - fzf
