Update list of Android apps, use PureVPN

--- a/ansible/install_homebrew_cask_apps.yml
+++ b/ansible/install_homebrew_cask_apps.yml
@@ -36,6 +36,7 @@
         - go2shell
         - the-unarchiver
         - mplayerx
+        - purevpn
     - shell: "{{ curdir }}/iterm2/install-settings.sh" # run in Terminal
 
     - shell: |
