Install Yarn with Homebrew

--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -43,6 +43,7 @@
         - tmux-cssh
         - ipcalc
         - mas
+        - yarn
 
     # java for Elasticsearch
     - shell: brew cask list | grep '^java$'
