--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -20,6 +20,7 @@
     - file: src=~/.vim dest=~/.config/nvim state=link
     - file: src=~/.vimrc dest=~/.config/nvim/init.vim state=link
 
+    - file: path=~/.vim/undo state=directory
     - file: path=~/.vim/autoload state=directory
     - get_url: url=https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim dest=~/.vim/autoload/plug.vim
     - shell: nvim +PlugInstall! +qall
