Use jid for json in terminal

--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -44,6 +44,7 @@
         - ipcalc
         - mas
         - yarn
+        - jid
 
     # java for Elasticsearch
     - shell: brew cask list | grep '^java$'
