--- a/ansible/install_homebrew_cask_apps.yml
+++ b/ansible/install_homebrew_cask_apps.yml
@@ -36,11 +36,12 @@
         - go2shell
         - the-unarchiver
         - purevpn
+        - keycastr # show keystrokes
     - shell: "{{ curdir }}/iterm2/install-settings.sh" # run in Terminal
 
     - shell: |
         if ! mas list | grep {{ item }}; then
-          mas intsall $(mas search '{{ item }}' | awk '{print $1}' | head -1)
+          mas install $(mas search '{{ item }}' | awk '{print $1}' | head -1)
         fi
       with_items:
         - Simplenote
@@ -49,3 +50,4 @@
         - Keynote
         - Spark
         - Wunderlist
+        - Monosnap
