Use GnuPG to sign commits

--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -46,6 +46,7 @@
         - mas
         - yarn
         - jid
+        - gpg
 
     # java for Elasticsearch
     - shell: brew cask list | grep '^java$'
