--- a/ansible/install_oh_my_zsh.yml
+++ b/ansible/install_oh_my_zsh.yml
@@ -5,10 +5,10 @@
       ignore_errors: yes
 
     - get_url: url=https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh dest=/tmp/oh_my_zsh_install.sh mode=0744
-      when: zsh_version.stdout
+      when: zsh_version is undefined
 
     - shell: sh -c /tmp/oh_my_zsh_install.sh
-      when: zsh_version.stdout
+      when: zsh_version is undefined
 
     - shell: rm /tmp/oh_my_zsh_install.sh
-      when: zsh_version.stdout
+      when: zsh_version is undefined
