--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -22,3 +22,6 @@
       ignore_errors: yes # because of the error: Output is not to a terminal
 
     - shell: npm -g install instant-markdown-d
+
+    # https://github.com/neovim/neovim/issues/2048#issuecomment-78045837
+    - shell: infocmp $TERM | sed 's/kbs=^[hH]/kbs=\\177/' > $TERM.ti && tic $TERM.ti && rm $TERM.ti
