Try to use pygmentize to highlight syntax with cat

--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -44,3 +44,6 @@
       with_items:
         - vimrc
         - irbrc
+
+    - name: Install Pygments for cat syntax highlighting
+      shell: easy_install Pygments
