Add xhyve, aws-shell, minikube, docker-machine-driver-xhyve, kubectl

--- a/ansible/configure_python.yml
+++ b/ansible/configure_python.yml
@@ -21,5 +21,11 @@
       environment:
         PYENV_VERSION: "{{ python_version }}"
 
+    - name: Install aws-shell
+      shell: pip install --upgrade aws-shell
+      become: true # should be installed via sudo
+      environment:
+        PYENV_VERSION: "{{ python_version }}"
+
     - name: Rehash
       shell: pyenv rehash
