--- a/ansible/install_homebrew_cask_apps.yml
+++ b/ansible/install_homebrew_cask_apps.yml
@@ -38,6 +38,7 @@
         - purevpn
         - keycastr # show keystrokes
         - sqlitebrowser
+        - minikube
     - shell: "{{ curdir }}/iterm2/install-settings.sh" # run in Terminal
 
     - shell: |
