--- a/ansible/install_homebrew_cask_apps.yml
+++ b/ansible/install_homebrew_cask_apps.yml
@@ -39,6 +39,8 @@
         - keycastr # show keystrokes
         - sqlitebrowser
         - minikube
+        - google-cloud-sdk # requires Python2
+
     - shell: "{{ curdir }}/iterm2/install-settings.sh" # run in Terminal
 
     - shell: |
