--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -47,3 +47,7 @@
 
     - name: Install Pygments for cat syntax highlighting
       shell: easy_install Pygments
+
+    - name: Install aws-shell
+      shell: pip install --upgrade aws-shell
+      become: true # should be installed via sudo
