--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -25,3 +25,7 @@
 
     # https://github.com/neovim/neovim/issues/2048#issuecomment-78045837
     - shell: infocmp $TERM | sed 's/kbs=^[hH]/kbs=\\177/' > $TERM.ti && tic $TERM.ti && rm $TERM.ti
+
+    - name: Install nvim-client for python for deoplete.nvim
+      shell: pip install --upgrade neovim
+      become: true # should be installed via sudo
