Port sshrc to remote machine as well

--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -40,6 +40,7 @@
         - spring.plugin.zsh
         - unix.plugin.zsh
         - vim.plugin.zsh
+        - sshrc.plugin.zsh
     - file: src={{ curdir }}/{{ item }} dest=~/.sshrc.d/{{ item }} state=link
       with_items:
         - vimrc
