Try to use nathanaelkane/vim-indent-guides plugin

--- a/bundle/config
+++ b/bundle/config
@@ -2,3 +2,6 @@
 BUNDLE_BUILD__PUMA: "--with-opt-dir=/usr/local/opt/openssl"
 BUNDLE_BUILD__EVENTMACHINE: "--with-cppflags=-I/usr/local/opt/openssl/include"
 BUNDLE_JOBS: "4"
+BUNDLE_GEM__TEST: "rspec"
+BUNDLE_GEM__MIT: "true"
+BUNDLE_GEM__COC: "true"
