Use osxfuse + ntfs-3g to write to NTFS disks
https://gist.github.com/exAspArk/ee0211e29f0593ed21f5612fad934580

--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -55,6 +55,9 @@
         - docker-machine-driver-xhyve
         - kubectl
         - heroku
+        - ntfs-3g
+        - ffmpeg
+        - rsync
 
     - name: Set permissions for docker-machine-driver-xhyve
       shell: |
