Add shortcut to add "debugger" for JS files

--- a/ansible/install_homebrew_cask_apps.yml
+++ b/ansible/install_homebrew_cask_apps.yml
@@ -39,6 +39,7 @@
         - minikube
         - google-cloud-sdk # requires Python2
         - osxfuse
+        - insomnia
 
     - shell: "{{ curdir }}/iterm2/install-settings.sh" # run in Terminal
 
