Use ripgrep instead of the_silver_searcher

--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -33,7 +33,7 @@
         - graphicsmagick
         - leiningen
         - sphinx
-        - the_silver_searcher
+        - ripgrep
         - 'neovim/neovim/neovim'
         - wget
         - sshrc
