Use bat instead of Pygments as a cat with syntax highlight

--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -60,6 +60,7 @@
         - trash
         - pstree
         - geth # ethereum
+        - bat # syntax highlight
 
     - name: Set permissions for docker-machine-driver-xhyve
       shell: |
