--- a/ansible/install_homebrew_cask_apps.yml
+++ b/ansible/install_homebrew_cask_apps.yml
@@ -41,6 +41,7 @@
         - osxfuse
         - insomnia
         - mist # ethereum
+        - tableplus # sql GUI vs psequel
 
     - shell: "{{ curdir }}/iterm2/install-settings.sh" # run in Terminal
 
