Don't use nathanaelkane/vim-indent-guides for now

--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -61,6 +61,7 @@
         - pstree
         - geth # ethereum
         - bat # syntax highlight
+        - watch
 
     - name: Set permissions for docker-machine-driver-xhyve
       shell: |
