Try using brave again

--- a/ansible/install_homebrew_cask_apps.yml
+++ b/ansible/install_homebrew_cask_apps.yml
@@ -6,7 +6,7 @@
           brew cask install {{ item }}
         fi
       with_items:
-        - google-chrome
+        - brave-browser
         - skype
         - dropbox
         - sourcetree
