--- a/ansible/install_homebrew_apps.yml
+++ b/ansible/install_homebrew_apps.yml
@@ -23,37 +23,37 @@
       with_items:
         - git
         - openssl
-        - rbenv
-        - ruby-build
-        - pyenv
+        # - rbenv
+        # - ruby-build
+        # - pyenv
+        # - nvm
         - cmake
         - ctags
         - go
         - imagemagick
-        - graphicsmagick
-        - leiningen
-        - sphinx
+        # - graphicsmagick # imagemagick fork
+        # - leiningen # clojure
+        # - sphinx
         - ripgrep
         - 'neovim/neovim/neovim'
         - wget
         - sshrc
         - fzf
-        - node
+        # - node
         - unar
         - findutils # to use gfind with -print option
         - gnu-tar # for Ansible unarchive module
-        - logstash
-        - elixir
+        # - logstash
+        # - elixir
         - tmux-cssh
         - ipcalc
         - mas
         - yarn
         - jid
-        - nvm
-        - xhyve
-        - docker-machine-driver-xhyve
-        - kubectl
-        - heroku
+        # - xhyve
+        # - docker-machine-driver-xhyve # minikube
+        # - kubectl
+        # - heroku
         - ntfs-3g
         - ffmpeg
         - rsync
@@ -63,17 +63,10 @@
         - bat # syntax highlight
         - watch
 
-    - name: Set permissions for docker-machine-driver-xhyve
-      shell: |
-        sudo chown root:wheel /usr/local/opt/docker-machine-driver-xhyve/bin/docker-machine-driver-xhyve &&
-        sudo chmod u+s /usr/local/opt/docker-machine-driver-xhyve/bin/docker-machine-driver-xhyve
-
-    # java for Elasticsearch
-    - shell: brew cask list | grep '^java$'
-      ignore_errors: true
-      register: java_exists
-    - shell: java_exists
-      when: java_exists|failed
+    # - name: Set permissions for docker-machine-driver-xhyve
+    #   shell: |
+    #     sudo chown root:wheel /usr/local/opt/docker-machine-driver-xhyve/bin/docker-machine-driver-xhyve &&
+    #     sudo chmod u+s /usr/local/opt/docker-machine-driver-xhyve/bin/docker-machine-driver-xhyve
 
     # to avoid using flag --with-openssl-dir=/usr/local/opt/openssl
     - shell: brew link --force openssl
@@ -85,15 +78,15 @@
           ln -sfv /usr/local/opt/{{ item }}/*.plist ~/Library/LaunchAgents
         fi
       with_items:
-        - elasticsearch
-        - kibana
-        - memcached
-        - mongodb
-        - mysql
+        # - elasticsearch
+        # - kibana
+        # - memcached
+        # - mongodb
+        # - mysql
         - postgresql
         - redis
-        - rabbitmq
-        - selenium-server-standalone
+        # - rabbitmq
+        # - selenium-server-standalone
 
     # postgresql
     - shell: createuser -s postgres
@@ -103,40 +96,41 @@
     - file: path=~/.rbenv state=absent
     - file: src=/usr/local/opt/rbenv dest=~/.rbenv state=link
 
-    # - shell: brew install phantomjs # v2 currently does not work with OS X El Capitan, use lines below:
-    - shell: yarn global add phantom
-    - shell: yarn global add phantomjs
+    # # phantomjs
+    # # - shell: brew install phantomjs # v2 currently does not work with OS X El Capitan, use lines below:
+    # - shell: yarn global add phantom
+    # - shell: yarn global add phantomjs
 
-    # ethereum
-    - shell: yarn global add truffle
+    # # ethereum
+    # - shell: yarn global add truffle
 
     # mert for iTerm 3
     - shell: yarn global add mert
 
-    # elasticsearch plugins
-    - shell: /usr/local/Cellar/elasticsearch/*/libexec/bin/plugin list | grep 'license$'
-      ignore_errors: true
-      register: license_exists
-    - shell: /usr/local/Cellar/elasticsearch/*/libexec/bin/plugin install license
-      when: license_exists|failed
+    # # elasticsearch plugins
+    # - shell: /usr/local/Cellar/elasticsearch/*/libexec/bin/plugin list | grep 'license$'
+    #   ignore_errors: true
+    #   register: license_exists
+    # - shell: /usr/local/Cellar/elasticsearch/*/libexec/bin/plugin install license
+    #   when: license_exists|failed
 
-    - shell: /usr/local/Cellar/elasticsearch/*/libexec/bin/plugin list | grep 'marvel-agent$'
-      ignore_errors: true
-      register: marvel_agent_exists
-    - shell: /usr/local/Cellar/elasticsearch/*/libexec/bin/plugin install marvel-agent
-      when: marvel_agent_exists|failed
+    # - shell: /usr/local/Cellar/elasticsearch/*/libexec/bin/plugin list | grep 'marvel-agent$'
+    #   ignore_errors: true
+    #   register: marvel_agent_exists
+    # - shell: /usr/local/Cellar/elasticsearch/*/libexec/bin/plugin install marvel-agent
+    #   when: marvel_agent_exists|failed
 
-    - shell: kibana plugin -l | grep '^sense$'
-      ignore_errors: true
-      register: sense_exists
-    - shell: kibana plugin --install elastic/sense
-      when: sense_exists|failed
+    # - shell: kibana plugin -l | grep '^sense$'
+    #   ignore_errors: true
+    #   register: sense_exists
+    # - shell: kibana plugin --install elastic/sense
+    #   when: sense_exists|failed
 
-    - shell: kibana plugin -l | grep '^marvel$'
-      ignore_errors: true
-      register: marvel_exists
-    - shell: kibana plugin --install elasticsearch/marvel/latest
-      when: marvel_exists|failed
+    # - shell: kibana plugin -l | grep '^marvel$'
+    #   ignore_errors: true
+    #   register: marvel_exists
+    # - shell: kibana plugin --install elasticsearch/marvel/latest
+    #   when: marvel_exists|failed
 
-    - shell: brew services restart elasticsearch
-    - shell: brew services restart kibana
+    # - shell: brew services restart elasticsearch
+    # - shell: brew services restart kibana
