--- a/ansible/backup.yml
+++ b/ansible/backup.yml
@@ -20,17 +20,6 @@
 
     - synchronize: src=~/.ssh/ dest={{ backup_path }}/ssh times=yes recursive=yes rsync_opts="-u"
 
-    - name: Check Sequel Pro favorites existance
-      stat: path="~/Library/Application Support/Sequel Pro/Data/Favorites.plist"
-      register: sequel_pro_favorites
-
-    - synchronize:
-        src: '~/Library/Application Support/Sequel Pro/Data/Favorites.plist'
-        dest: '{{ backup_path }}/SequelProFavorites.plist'
-        times: yes
-        rsync_opts: "-u"
-      when: sequel_pro_favorites.stats.isreg is defined
-
     - file: path={{ backup_path }}/gpg state=directory
 
     - name: Backup GPG key
@@ -41,13 +30,24 @@
       with_items:
         - exaspark@gmail.com
 
-    - name: Create PSequel directory
-      file: path={{ backup_path }}/psequel state=directory
+    # - name: Check Sequel Pro favorites existance
+    #   stat: path="~/Library/Application Support/Sequel Pro/Data/Favorites.plist"
+    #   register: sequel_pro_favorites
 
-    - name: Backup PSequel connections
-      synchronize:
-        src: "~/Library/Application\ Support/com.psequel.PSequel/"
-        dest: "{{ backup_path }}/psequel"
-        times: yes
-        recursive: yes
-        rsync_opts: "-u"
+    # - synchronize:
+    #     src: '~/Library/Application Support/Sequel Pro/Data/Favorites.plist'
+    #     dest: '{{ backup_path }}/SequelProFavorites.plist'
+    #     times: yes
+    #     rsync_opts: "-u"
+    #   when: sequel_pro_favorites.stats.isreg is defined
+
+    # - name: Create PSequel directory
+    #   file: path={{ backup_path }}/psequel state=directory
+
+    # - name: Backup PSequel connections
+    #   synchronize:
+    #     src: "~/Library/Application\ Support/com.psequel.PSequel/"
+    #     dest: "{{ backup_path }}/psequel"
+    #     times: yes
+    #     recursive: yes
+    #     rsync_opts: "-u"
