--- a/ansible/install_gui_apps.yml
+++ b/ansible/install_gui_apps.yml
@@ -27,6 +27,7 @@
         - qbittorrent
         - gpg-suite
         - graphql-playground
+        - google-chrome
         # - sqlitebrowser
         # - skype
         # - tunnelblick
