--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -24,6 +24,7 @@
 
     - shell: yarn global add https://github.com/ramitos/jsctags.git
     - shell: yarn global add livedown
+    - shell: yarn global add neovim
 
     # https://github.com/neovim/neovim/issues/2048#issuecomment-78045837
     - shell: infocmp $TERM | sed 's/kbs=^[hH]/kbs=\\177/' > $TERM.ti && tic $TERM.ti && rm $TERM.ti
